# ETH-Simulations

./: README.md  alignmentSim.py
Talbot-gratings/: laserCutGratings.ipynb  talbot-grating.ipynb
TempCoeff/: copper.csv  molybdenum.csv  silicon.csv  tempCoeff.ipynb
Vibrations/: vibrationLimit.ipynb
XRaySims/: XAttentuation.ipynb  rateResolution.ipynb  xrayPower.ipynb
alignment/: CMakeLists.txt  alignmentC.cpp  alignmentIter.py  alignmentPattern.py  alignmentVals.json  alternativeOptions.txt
alignment2/: Alignment2  CMakeCache.txt  CMakeLists.txt  Makefile  alignment2.cpp  cmake_install.cmake  settings.json
jsonPullTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  jsonTest  jsonTest.cpp  settings.json
